# reui

./: Cargo.toml
reui/: Cargo.toml
reui-core/: Cargo.toml
reui-core/src/: color.rs  geom.rs  lib.rs  pixel.rs
reui-core/src/color/: buf.rs  bw.rs  def.rs  gs.rs  gsa.rs  idx.rs  raw.rs  rgb.rs  rgba.rs
reui-core/src/font/: def.rs  v1.rs  v2.rs
reui-macro/: Cargo.toml
reui-macro/src/: font.rs  image.rs  lib.rs  parse.rs  utils.rs
reui-macro/src/font/: attr.rs  chars.rs  data.rs  item.rs  macros.rs  params.rs
reui-macro/src/image/: attr.rs  data.rs  item.rs  macros.rs
reui-macro/src/parse/: embedded_item.rs  static_item.rs
reui-macro/src/parse_/: font.rs  utils.rs
reui-macro/tests/: embed_fonts.rs  embed_images.rs
reui/src/: draw.rs  font.rs  geom.rs  lib.rs  pixel.rs
reui/src/color/: buf.rs  bw.rs  def.rs  gs.rs  gsa.rs  idx.rs  rgb.rs  rgba.rs
reui/src/font/: def.rs  v1.rs  v2.rs
reui/src/geom/: area.rs  dim.rs  point.rs  rect.rs  size.rs
