[package]
name = "reui-core"
version = "0.1.0"
authors = ["K. <kayo@illumium.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.num-traits]
version = "^0.2"
default-features = false

[dependencies.typenum]
version = "^1"
features = ["no_std"]

[dependencies.generic-array]
version = "^0.13"

[features]
