[package]
name = "reui"
version = "0.1.0"
authors = ["K. <kayo@illumium.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.typenum]
version = "^1"

[dependencies.generic-array]
version = "^0.13"

[features]
#default = ["pixel-buffer"]
