[package]
name = "reui"
version = "0.1.0"
authors = ["K. <kayo@illumium.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.reui-core]
version = "^0.1"
path = "../reui-core"

[dependencies.reui-macro]
version = "^0.1"
path = "../reui-macro"
